// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CarouselStack > carousel-slider__item > Attributes > should have the id attr range (0 < 2) 1`] = `"0"`;

exports[`CarouselStack > carousel-slider__item > Attributes > should have the id attr range (0 < 2) 2`] = `"1"`;

exports[`CarouselStack > carousel-slider__item > Attributes > should have the id attr range (0 < 3) 1`] = `"0"`;

exports[`CarouselStack > carousel-slider__item > Attributes > should have the id attr range (0 < 3) 2`] = `"1"`;

exports[`CarouselStack > carousel-slider__item > Attributes > should have the id attr range (0 < 3) 3`] = `"2"`;

exports[`CarouselStack > carousel-slider__item > Attributes > should render 2 items DOM element 1`] = `2`;

exports[`CarouselStack > carousel-slider__item > Attributes > should render 3 items DOM element 1`] = `3`;

exports[`CarouselStack > carousel-slider__item > Slots > should render the "default" slot content (<p>Default slot content</p>) 1`] = `
"<div data-test-id="carousel-stack__item" id="0" class="cmf-app-carousel-stack__item">
  <p>Default slot content</p>
</div>"
`;

exports[`CarouselStack > carousel-slider__item > Slots > should render the "named" slot content (<p>Named slot content</p>) 1`] = `
"<div data-test-id="carousel-stack__item" id="0" class="cmf-app-carousel-stack__item">
  <p>Named slot content</p>
</div>"
`;

exports[`CarouselStack > pagination > should not render MainPagination if items count = 0 and showPagination = %b true 1`] = `false`;

exports[`CarouselStack > pagination > should not render MainPagination if items count = 1 and showPagination = %b false 1`] = `false`;

exports[`CarouselStack > pagination > should not render MainPagination if items count = 1 and showPagination = %b true 1`] = `false`;

exports[`CarouselStack > pagination > should not render MainPagination if items count = 2 and showPagination = %b false 1`] = `false`;
